--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
         uses: ludeeus/action-shellcheck@0.2.0
         with:
           # Paths to ignore when running ShellCheck
-            ignore: rpm
+            ignore: other
