--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,12 +23,9 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Run a one-line script
+    - name: Add execute permission
       run: chmod +x otpgen/otpgen.sh
 
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        sudo bash otpgen/otpgen.sh -i
-        echo $?
-  
+    # Runs a single command using the runners shell
+    - name: Testing install command
+      run: sudo ./otpgen/otpgen.sh -i
