--- a/.github/workflows/test_github_ubuntu.yml
+++ b/.github/workflows/test_github_ubuntu.yml
@@ -22,26 +22,34 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Add execute permission
-      run: chmod +x otpgen/otpgen.sh
+    - name: Prep env for testing
+      run: bash ./ci/prep_env.sh
 
-    - name: test_1 Print version
-      run: bash ./otpgen/otpgen.sh -V
+    - name: Test 1: Print version
+      run: bash ./ci/print_version.sh
 
-    - name: test_2_1 Install packages
-      run: sudo apt-get install zbar-tools xclip oathtool
+    - name: Test 2: Print help
+      run: bash ./ci/print_help.sh
 
-    - name: test_2_2 Test install command from normal user with sudo
-      run: sudo bash -x ./otpgen/otpgen.sh -i
+    - name: Install required packages
+      run: bash ./ci/dpkg_install_requires.sh
 
-    - name: test_2_3 remove installation dir for next run 
-      run:  sudo rm -rf ~/otpgen
+    - name: Test 3: Test install command from normal user with sudo
+      run: sudo bash ./ci/install.sh
 
-    #- name: test_2_4 Test install command from normal user without sudo
-    #  run: bash -x ./otpgen/otpgen.sh -i
+    - name: Remove installation dir for next run 
+      run:  bash ./ci/cleanup.sh
 
-    - name: Testing clean install command with sudo
-      run: echo y| sudo bash -x ./otpgen/otpgen.sh --clean-install
+    - name: Test 4:  install command from normal user without sudo - when packages are installed
+      run: bash ./ci/install.sh
 
+    - name: Test 5: Testing clean install command with sudo
+      run: bash ./ci/reinstall.sh
+
+    - name: Test 6: Test add and list keys 
+      run:  bash ./ci/add_key.sh
+
+    - name: Test 7: generate OTP
+      run: bash ./ci/gen_key.sh
 
    ## TODO: test add key, list_key, gen_key (both HOTP, TOTP)
