[otrpgen.sh] Refuse to add duplicate key - Refuse to add duplicate key   Fixes #12 - Added CI test to test remove key - Added -d and -s in syntax - Replaced "key" word to "2FA" in output messages - Fixed bug in add_key where an useless commandline arg was being   parsed in the code.

--- a/.github/workflows/test_github_ubuntu20.yml
+++ b/.github/workflows/test_github_ubuntu20.yml
@@ -52,4 +52,5 @@ jobs:
     - name: Test  7 - generate OTP
       run: bash ./ci/gen_key.sh
 
-   ## TODO: test add key, list_key, gen_key (both HOTP, TOTP)
+    - name: Test  8 - remove OTP
+      run: bash ./ci/rm_key.sh
