--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,23 +12,24 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.7, 3.8, 3.9, '3.10', '3.11', '3.12']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
         with-qr: [true, false]
         exclude:
-          # Skip Windows with Python 3.7 (not supported)
-          - os: windows-latest
-            python-version: 3.7
           # Skip Windows with Python 3.8 (not supported)
           - os: windows-latest
-            python-version: 3.8
+            python-version: '3.8'
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip'
 
     - name: Install system dependencies (Ubuntu)
       if: matrix.os == 'ubuntu-latest' && matrix.with-qr
@@ -72,9 +73,11 @@ jobs:
 
     - name: Upload test results
       uses: actions/upload-artifact@v4
+      if: always()
       with:
         name: test-results-${{ matrix.os }}-${{ matrix.python-version }}
         path: |
           .tox/
           .coverage
           htmlcov/
+        retention-days: 7
