--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,10 @@ jobs:
           - os: windows-latest
             python-version: '3.8'
 
+    defaults:
+      run:
+        working-directory: otpgen
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -77,7 +81,7 @@ jobs:
       with:
         name: test-results-${{ matrix.os }}-${{ matrix.python-version }}
         path: |
-          .tox/
-          .coverage
-          htmlcov/
+          otpgen/.tox/
+          otpgen/.coverage
+          otpgen/htmlcov/
         retention-days: 7
