--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,6 +53,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        if [ "${{ matrix.with-qr }}" = "true" ]; then
+          pip install pyzbar
+        fi
         pip install pytest pytest-cov tox
 
     - name: Run tests with QR support
