fix: update tox configuration and add setup.py for proper package installation

--- a/otpgen/tox.ini
+++ b/otpgen/tox.ini
@@ -1,12 +1,15 @@
 [tox]
-envlist = py37,py38,py39,py310,py311,py312
+envlist = py39,py310,py311,py312
 isolated_build = True
+minversion = 4.0
 
 [testenv]
 passenv =
     OTPGEN_PASSWORD
     DYLD_LIBRARY_PATH
     LD_LIBRARY_PATH
+    WITH_QR
+    CI
 deps =
     pytest>=7.0.0
     pytest-cov>=4.1.0
@@ -19,13 +22,8 @@ deps =
     qrcode>=7.4.2
     pypng
 commands =
+    python -m pip install -e .
     pytest test_otpgen.py -v {posargs}
-
-[testenv:py37]
-basepython = python3.7
-
-[testenv:py38]
-basepython = python3.8
 
 [testenv:py39]
 basepython = python3.9
