--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,97 +1,40 @@
-name: Test OTP Generator
+name: Test
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, feature/python-otpgen ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, feature/python-otpgen ]
 
 jobs:
   test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
-        with-qr: [true, false]
-        exclude:
-          # Skip Windows with Python 3.8 (not supported)
-          - os: windows-latest
-            python-version: '3.8'
-
-    defaults:
-      run:
-        working-directory: otpgen
+        os: [ubuntu-latest, macos-latest]
+        python-version: [3.11]
+        with-qr: [false]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
 
-    - name: Install system dependencies (Ubuntu)
-      if: matrix.os == 'ubuntu-latest' && matrix.with-qr
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libzbar0
-        if [ "${{ matrix.with-qr }}" = "true" ]; then
-          sudo apt-get install -y zbar-tools
-        fi
-
-    - name: Install system dependencies (macOS)
-      if: matrix.os == 'macos-latest' && matrix.with-qr
-      run: |
-        brew install zbar
-
-    - name: Install Python dependencies (Unix)
-      if: matrix.os != 'windows-latest'
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install pytest pytest-cov
         if [ "${{ matrix.with-qr }}" = "true" ]; then
           pip install pyzbar
         fi
-        pip install pytest pytest-cov tox
-
-    - name: Install Python dependencies (Windows)
-      if: matrix.os == 'windows-latest'
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        if ("${{ matrix.with-qr }}" -eq "true") {
-          pip install pyzbar
-        }
-        pip install pytest pytest-cov tox
 
     - name: Run tests
       env:
-        OTPGEN_PASSWORD: "Test@123"
         WITH_QR: ${{ matrix.with-qr }}
-        CI: "true"
+        CI: true
       run: |
-        if [ "${{ matrix.with-qr }}" = "true" ]; then
-          python -m pytest test_otpgen.py -v
-        else
-          python -m pytest test_otpgen.py -v -k "not test_generate_test_qr and not test_add_key and not test_gen_key and not test_remove_key"
-        fi
-
-    - name: Run tox
-      run: |
-        tox
-
-    - name: Upload test results
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: test-results-${{ matrix.os }}-${{ matrix.python-version }}
-        path: |
-          otpgen/.tox/
-          otpgen/.coverage
-          otpgen/htmlcov/
-        retention-days: 7
+        cd otpgen
+        pytest test_otpgen.py -v
