--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,18 +2,16 @@ name: Test
 
 on:
   push:
-    branches: [ main, feature/python-otpgen ]
+    branches: [ master, feature/python-otpgen ]
   pull_request:
-    branches: [ main, feature/python-otpgen ]
+    branches: [ master, feature/python-otpgen ]
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
         python-version: [3.11]
-        with-qr: [false]
 
     steps:
     - uses: actions/checkout@v4
@@ -21,20 +19,13 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-        cache: 'pip'
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pytest pytest-cov
-        if [ "${{ matrix.with-qr }}" = "true" ]; then
-          pip install pyzbar
-        fi
-
+        sudo apt-get update
+        sudo apt-get install -y oathtool openssl xclip zbar-tools libcrack2
     - name: Run tests
-      env:
-        WITH_QR: ${{ matrix.with-qr }}
-        CI: true
       run: |
         cd otpgen
         pytest test_otpgen.py -v
